--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 sudo: required
 env:
   global:
-    - PROJECT_NAME: offst
+    - PROJECT_NAME: offset
     - RUST_BACKTRACE: full
 
 git:
@@ -136,7 +136,7 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-    repo: freedomlayer/offst
+    repo: freedomlayer/offset
     branch: master
 branches:
   only:
