.travis.yml: Created a possibly missing directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,8 @@ matrix:
       - ANDROID_VERSION=26
     before_install:
       - export ANDROID_HOME="${HOME}/android-sdk"
-      - mkdir -p $ANDROID_HOME;
+      - mkdir -p $ANDROID_HOME
+      - mkdir -p ${HOME}/android-sdk-dl
       - export ANDROID_NDK_HOME="${ANDROID_HOME}/ndk-bundle"
       - export PATH=$PATH:"${ANDROID_HOME}/tools/bin:${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin"
 
