--- a/.travis.yml
+++ b/.travis.yml
@@ -114,6 +114,9 @@ matrix:
       # Create $HOME/.cargo/config (from template):
       - cat travis/cargo_config_template | envsubst > $HOME/.cargo/config
 
+      # Show contents of directory, for debugging:
+      - ls ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/
+
       # Add symlinks for clang compilers:
       - >
         ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android${ANDROID_VERSION}-clang" 
