--- a/.travis.yml
+++ b/.travis.yml
@@ -119,14 +119,10 @@ jobs:
 
       # Add symlinks for clang compilers:
       - > 
-        ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android${ANDROID_VERSION}-clang" 
-              "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android-clang"
-      - > 
-        ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi${ANDROID_VERSION}-clang" 
-              "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/arm-linux-androideabi-clang"
-      - > 
-        ln -s "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android${ANDROID_VERSION}-clang"
-              "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android-clang"
+        cd "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin" &&
+        ln -s "./aarch64-linux-android${ANDROID_VERSION}-clang" aarch64-linux-android-clang &&
+        ln -s "./arm-linux-androideabi${ANDROID_VERSION}-clang" arm-linux-androideabi-clang &&
+        ln -s "./i686-linux-android${ANDROID_VERSION}-clang" i686-linux-android-clang
 
     script:
       - cargo build --target aarch64-linux-android
