--- a/.travis.yml
+++ b/.travis.yml
@@ -118,10 +118,8 @@ jobs:
         cd "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin" &&
         ln -s "./aarch64-linux-android${ANDROID_VERSION}-clang" aarch64-linux-android-clang &&
         ln -s "./arm-linux-androideabi${ANDROID_VERSION}-clang" arm-linux-androideabi-clang &&
-        ln -s "./i686-linux-android${ANDROID_VERSION}-clang" i686-linux-android-clang
-
-      # Show contents of directory, for debugging:
-      - pwd
+        ln -s "./i686-linux-android${ANDROID_VERSION}-clang" i686-linux-android-clang && 
+        cd -
 
       # Make sure rust stable is installed
       - rustup install stable
