--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ jobs:
     env:
       # Get revision number from https://dl.google.com/android/repository/repository2-1.xml
       # Look for the string 'sdk-tools-linux-'.
-      - ANDROID_SDK_VERSION=4333796
+      - ANDROID_SDK_VERSION=6200805
       - ANDROID_VERSION=26
     before_install:
       - export ANDROID_HOME="${HOME}/android-sdk"
@@ -104,10 +104,10 @@ jobs:
       # Download and unzip the Android SDK tools (if not already there thanks to the cache mechanism)
       # Latest version available here: https://developer.android.com/studio/#command-tools
       - > 
-        if test ! -e $HOME/android-sdk-dl/sdk-tools.zip ; then 
-          curl "https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_VERSION}.zip" > "$HOME/android-sdk-dl/sdk-tools.zip" ; 
+        if test ! -e $HOME/android-sdk-dl/commandlinetools.zip ; then 
+          curl "https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_VERSION}_latest.zip" > "$HOME/android-sdk-dl/commandlinetools.zip" ; 
         fi
-      - unzip -qq -n $HOME/android-sdk-dl/sdk-tools.zip -d $ANDROID_HOME;
+      - unzip -qq -n $HOME/android-sdk-dl/commandlinetools.zip -d $ANDROID_HOME;
 
       # Create repositories.cfg ahead of time, see: 
       # https://stackoverflow.com/questions/43433542/stuck-at-android-repositories-cfg-could-not-be-loaded
