.travis.yml: Added sdk_root argument

--- a/.travis.yml
+++ b/.travis.yml
@@ -112,8 +112,11 @@ jobs:
       # Create repositories.cfg ahead of time, see: 
       # https://stackoverflow.com/questions/43433542/stuck-at-android-repositories-cfg-could-not-be-loaded
       - mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
+
       # Install or update Android SDK components (will not do anything if already up to date thanks to the cache mechanism)
-      - echo y | $ANDROID_HOME/tools/bin/sdkmanager "platforms;android-${ANDROID_VERSION}" "build-tools;${ANDROID_VERSION}.0.0" 'ndk-bundle' > /dev/null
+      - > 
+        echo y | $ANDROID_HOME/tools/bin/sdkmanager 
+          --sdk_root=${ANDROID_HOME} "platforms;android-${ANDROID_VERSION}" "build-tools;${ANDROID_VERSION}.0.0" 'ndk-bundle' > /dev/null
       # Add rust targets:
       - rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android
 
