--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,7 @@ jobs:
       # Get revision number from https://dl.google.com/android/repository/repository2-1.xml
       # Look for the string 'sdk-tools-linux-'.
       - ANDROID_SDK_VERSION=6200805
+      - ANDROID_BUILD_TOOLS_VERSION="26.0.2"
       - ANDROID_VERSION=26
     before_install:
       - export ANDROID_HOME="${HOME}/android-sdk"
@@ -116,7 +117,7 @@ jobs:
       # Install or update Android SDK components (will not do anything if already up to date thanks to the cache mechanism)
       - > 
         echo y | $ANDROID_HOME/tools/bin/sdkmanager 
-          --sdk_root=${ANDROID_HOME} "platforms;android-${ANDROID_VERSION}" "build-tools;${ANDROID_VERSION}.0.0" 'ndk-bundle' > /dev/null
+          --sdk_root=${ANDROID_HOME} "platforms;android-${ANDROID_VERSION}" "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" 'ndk-bundle' > /dev/null
       # Add rust targets:
       - rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android
 
