--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ env:
   global:
     - PROJECT_NAME: offset
     - RUST_BACKTRACE: full
+    # Get revision number from https://dl.google.com/android/repository/repository2-1.xml
+    # Look for the string 'sdk-tools-linux-'.
+    - ANDROID_SDK_VERSION: 6200805
+    - ANDROID_BUILD_TOOLS_VERSION: "26.0.2"
+    - ANDROID_VERSION: 26
 
 git:
   depth: 1
@@ -10,7 +15,7 @@ git:
 # Don't cache the cargo registry:
 # See: https://levans.fr/rust_travis_cache.html
 before_cache:
-    - travis/trusty/post/cargo-sweep.sh
+    - ci/post/cargo-sweep.sh
     - rm -rf $HOME/.cargo/registry
 
 cache:
@@ -38,14 +43,14 @@ jobs:
 #       sources:
 #       - ubuntu-toolchain-r-test
 #   script:
-#   - travis/trusty/pre/cargo-config.sh
-#   - travis/trusty/pre/capnp.sh
+#   - ci/pre/cargo-config.sh
+#   - ci/pre/capnp.sh
 #   - cargo fmt --all -- --check
 #   - cargo clippy
 #     # We add target dir so that kcov can find the test files to run:
 #   - cargo test --target ${TARGET}
-#   - travis/trusty/post/kcov/try-install.sh
-#   - travis/trusty/post/kcov/run.sh
+#   - ci/post/kcov/try-install.sh
+#   - ci/post/kcov/run.sh
 
 # - name: macOS
 #   env: TARGET=x86_64-apple-darwin
@@ -77,7 +82,8 @@ jobs:
 #       - cargo test
 
     # Based on: https://github.com/kennytm/rust-ios-android/blob/master/.travis.yml
-  - name: Android
+  - name: aarch64-linux-android
+    env: TARGET="aarch64-linux-android"
     os: linux
     dist: trusty
     rust: none
@@ -88,65 +94,53 @@ jobs:
         - g++-6
         sources:
         - ubuntu-toolchain-r-test
-    env:
-      # Get revision number from https://dl.google.com/android/repository/repository2-1.xml
-      # Look for the string 'sdk-tools-linux-'.
-      - ANDROID_SDK_VERSION=6200805
-      - ANDROID_BUILD_TOOLS_VERSION="26.0.2"
-      - ANDROID_VERSION=26
     before_install:
-      - export ANDROID_HOME="${HOME}/android-sdk"
-      - mkdir -p $ANDROID_HOME
-      - mkdir -p ${HOME}/android-sdk-dl
-      - export ANDROID_NDK_HOME="${ANDROID_HOME}/ndk-bundle"
-      - export PATH=$PATH:"${ANDROID_HOME}/tools/bin:${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin"
-
+      - source ./ci/android_before_install.sh
     install:
-      # Download and unzip the Android SDK tools (if not already there thanks to the cache mechanism)
-      # Latest version available here: https://developer.android.com/studio/#command-tools
-      - > 
-        if test ! -e $HOME/android-sdk-dl/commandlinetools.zip ; then 
-          curl "https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_VERSION}_latest.zip" > "$HOME/android-sdk-dl/commandlinetools.zip" ; 
-        fi
-      - unzip -qq -n $HOME/android-sdk-dl/commandlinetools.zip -d $ANDROID_HOME;
-
-      # Create repositories.cfg ahead of time, see: 
-      # https://stackoverflow.com/questions/43433542/stuck-at-android-repositories-cfg-could-not-be-loaded
-      - mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
-
-      # Accept the license:
-      - yes | $ANDROID_HOME/tools/bin/sdkmanager --sdk_root=${ANDROID_HOME} --licenses > /dev/null
-
-      # Install or update Android SDK components (will not do anything if already up to date thanks to the cache mechanism)
-      - >  
-        $ANDROID_HOME/tools/bin/sdkmanager --sdk_root=${ANDROID_HOME} 
-        "platforms;android-${ANDROID_VERSION}" "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" 'ndk-bundle' > /dev/null
-      # Add rust targets:
-      - rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android
-
-      # Create $HOME/.cargo/config (from template):
-      - cat travis/cargo_config_template | envsubst > $HOME/.cargo/config
-
-      # Add symlinks for clang compilers:
-      - > 
-        cd "${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin" &&
-        ln -sf "./aarch64-linux-android${ANDROID_VERSION}-clang" aarch64-linux-android-clang &&
-        ln -sf "./armv7a-linux-androideabi${ANDROID_VERSION}-clang" arm-linux-androideabi-clang &&
-        ln -sf "./i686-linux-android${ANDROID_VERSION}-clang" i686-linux-android-clang && 
-        cd -
-
-      # Make sure rust stable is installed
-      - rustup install stable
-
-      # Install capnp:
-      - travis/trusty/pre/capnp.sh
-
+      - ./ci/android_install.sh
     script:
-      - cargo build --target aarch64-linux-android
-      - cargo build --target armv7-linux-androideabi
-      - cargo build --target i686-linux-android
+      - cargo build --target ${TARGET}
 
-before_deploy: travis/before_deploy.sh
+  - name: armv7-linux-androideabi
+    env: TARGET="armv7-linux-androideabi"
+    os: linux
+    dist: trusty
+    rust: none
+    addons:
+      apt:
+        packages:
+        - gcc-6
+        - g++-6
+        sources:
+        - ubuntu-toolchain-r-test
+    before_install:
+      - source ./ci/android_before_install.sh
+    install:
+      - ./ci/android_install.sh
+    script:
+      - cargo build --target ${TARGET}
+
+  - name: i686-linux-android
+    env: TARGET="i686-linux-android"
+    os: linux
+    dist: trusty
+    rust: none
+    addons:
+      apt:
+        packages:
+        - gcc-6
+        - g++-6
+        sources:
+        - ubuntu-toolchain-r-test
+    before_install:
+      - source ./ci/android_before_install.sh
+    install:
+      - ./ci/android_install.sh
+    script:
+      - cargo build --target ${TARGET}
+
+
+before_deploy: ci/before_deploy.sh
 deploy:
   provider: releases
   api_key:
