--- a/.travis.yml
+++ b/.travis.yml
@@ -25,56 +25,58 @@ jobs:
   fast_finish: true
   include:
 
-# - name: Linux
-#   env: TARGET=x86_64-unknown-linux-gnu CC=gcc-6 CXX=g++-6 RUSTFLAGS="-C link-dead-code"
-#   os: linux
-#   dist: trusty
-#   rust: none
-#   addons:
-#     apt:
-#       packages:
-#       - gcc-6
-#       - g++-6
-#       sources:
-#       - ubuntu-toolchain-r-test
-#   script:
-#   - ci/pre/cargo-config.sh
-#   - ci/pre/capnp.sh
-#   - cargo fmt --all -- --check
-#   - cargo clippy
-#     # We add target dir so that kcov can find the test files to run:
-#   - cargo test --target ${TARGET}
-#   - ci/post/kcov/try-install.sh
-#   - ci/post/kcov/run.sh
+  - name: Linux
+    env: TARGET=x86_64-unknown-linux-gnu
+    os: linux
+    dist: trusty
+    rust: none
+    addons:
+      apt:
+        packages:
+        - gcc-6
+        - g++-6
+        sources:
+        - ubuntu-toolchain-r-test
+    script:
+    - ci/pre/cargo-config.sh
+    - ci/pre/capnp.sh
+      # Check formatting:
+    - cargo fmt --all -- --check
+      # Run clippy check:
+    - cargo clippy
+      # We add target dir so that kcov can find the test files to run:
+    - RUSTFLAGS="-C link-dead-code" cargo test --target ${TARGET}
+    - ci/post/kcov/try-install.sh
+    - ci/post/kcov/run.sh
 
-# - name: macOS
-#   env: TARGET=x86_64-apple-darwin
-#   os: osx
-#   rust: none
-#   osx_image: xcode9.4.1
-#   # Solution due to https://travis-ci.community/t/homebrew-syntax-error/5623 :
-#   before_script:
-#   - HOMEBREW_NO_AUTO_UPDATE=1 brew install capnp
-#   script:
-#   - cargo test
+  - name: macOS
+    env: TARGET=x86_64-apple-darwin
+    os: osx
+    rust: none
+    osx_image: xcode9.4.1
+    # Solution due to https://travis-ci.community/t/homebrew-syntax-error/5623 :
+    before_script:
+    - HOMEBREW_NO_AUTO_UPDATE=1 brew install capnp
+    script:
+    - cargo test
 
-# - name: Windows
-#   env: TARGET=x86_64-pc-windows-msvc
-#   os: windows
-#   # Used as a temporary fix for windows CI issue in travis.
-#   # See: https://travis-ci.community/t/windows-instances-hanging-before-install/250/25
-#   filter_secrets: false
-#   rust: none
-#   before_script:
-#   # We install vcredist2010 as a requirement for the yasm assembler (Used for ring compilation)
-#   - choco install vcredist2010 capnproto strawberryperl
-#   - mkdir -p $HOME/install/yasm
-#   - curl -o $HOME/install/yasm/yasm.exe https://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe
-#   - export PATH=$HOME/install/yasm:$PATH
-#   - echo $PATH
-#   - rustup target add x86_64-pc-windows-msvc
-#   script:
-#       - cargo test
+  - name: Windows
+    env: TARGET=x86_64-pc-windows-msvc
+    os: windows
+    # Used as a temporary fix for windows CI issue in travis.
+    # See: https://travis-ci.community/t/windows-instances-hanging-before-install/250/25
+    filter_secrets: false
+    rust: none
+    before_script:
+    # We install vcredist2010 as a requirement for the yasm assembler (Used for ring compilation)
+    - choco install vcredist2010 capnproto strawberryperl
+    - mkdir -p $HOME/install/yasm
+    - curl -o $HOME/install/yasm/yasm.exe https://www.tortall.net/projects/yasm/releases/yasm-1.3.0-win64.exe
+    - export PATH=$HOME/install/yasm:$PATH
+    - echo $PATH
+    - rustup target add x86_64-pc-windows-msvc
+    script:
+        - cargo test
 
     # Based on: https://github.com/kennytm/rust-ios-android/blob/master/.travis.yml
   - name: aarch64-linux-android
