--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
   fast_finish: true
   include:
 
-  - name: Linux
+  - name: x86_64-unknown-linux-gnu
     env: TARGET=x86_64-unknown-linux-gnu
     os: linux
     dist: xenial
@@ -49,7 +49,7 @@ jobs:
     - ci/post/kcov/try-install.sh
     - ci/post/kcov/run.sh
 
-  - name: macOS
+  - name: x86_64-apple-darwin
     env: TARGET=x86_64-apple-darwin
     os: osx
     rust: none
@@ -60,7 +60,7 @@ jobs:
     script:
     - cargo test
 
-  - name: Windows
+  - name: x86_64-pc-windows-msvc
     env: TARGET=x86_64-pc-windows-msvc
     os: windows
     # Used as a temporary fix for windows CI issue in travis.
