--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,9 +1,1 @@
-Click==7.0
-Jinja2==2.10.1
-livereload==2.6.0
-Markdown==3.1
-MarkupSafe==1.1.1
-mkdocs==1.0.4
-PyYAML==5.1
-six==1.12.0
-tornado==6.0.2
+Sphinx==3.0.2
