--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -10,7 +10,7 @@ formats: all
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: doc/docs/conf.py
+  configuration: doc/docs/source/conf.py
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
