--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -11,8 +11,10 @@ common = { path = "../common", version = "0.1.0", package = "offset-common" }
 proto = { path = "../proto", version = "0.1.0", package = "offset-proto" }
 
 # ring = "=0.13.0-alpha"
-ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
-untrusted = "0.6"
+# ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
+# untrusted = "0.6"
+#
+x25519-dalek = "0.6.0"
 
 sha2 = "0.9.0"
 
@@ -25,7 +27,9 @@ derive_more = "0.14.0"
 # Quickcheck:
 quickcheck = {version = "0.9"}
 quickcheck_derive = {version = "0.2.1"}
+
 rand = "0.7.3"
+rand_core = "0.5.1"
 
 [dependencies.byteorder]
 version = "1.1"
