crypto: Added hkdf, temporarily readded ring dependency

--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -11,12 +11,15 @@ common = { path = "../common", version = "0.1.0", package = "offset-common" }
 proto = { path = "../proto", version = "0.1.0", package = "offset-proto" }
 
 # ring = "=0.13.0-alpha"
-# ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
+ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
 # untrusted = "0.6"
 #
 x25519-dalek = "0.6.0"
 
 sha2 = "0.9.0"
+# hkdf = "0.8.0"
+hkdf = "0.9.0-alpha.0"
+
 
 serde = {version = "1.0.104", features = ["derive"]}
 bytes = "0.5.4"
