--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -15,6 +15,8 @@ ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.
 # untrusted = "0.6"
 #
 x25519-dalek = "0.6.0"
+ed25519-dalek = "1.0.0-pre.3"
+
 
 sha2 = "0.9.0"
 # hkdf = "0.8.0"
