--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -21,6 +21,7 @@ ed25519-dalek = "1.0.0-pre.3"
 sha2 = "0.9.0"
 # hkdf = "0.8.0"
 hkdf = "0.9.0-alpha.0"
+chacha20poly1305 = "0.5.1"
 
 
 serde = {version = "1.0.104", features = ["derive"]}
