--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ jobs:
         - g++-6
         sources:
         - ubuntu-toolchain-r-test
+    install:
+      # Fix according to https://github.com/codecov/codecov-bash/issues/94#issuecomment-349216688
+    - pip install codecov
     script:
       # Add clippy and rustfmt:
     - rustup update
@@ -46,6 +49,7 @@ jobs:
     - cargo fmt --all -- --check
       # Run clippy check:
     - cargo clippy
+    after_success:
       # We add target dir so that kcov can find the test files to run:
     - RUSTFLAGS="-C link-dead-code" cargo test --target ${TARGET}
     - ci/post/kcov/try-install.sh
