--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -16,6 +16,7 @@ ed25519-dalek = "1.0.0-pre.3"
 sha2 = "0.9.0"
 hkdf = "0.9.0-alpha.0"
 chacha20poly1305 = "0.5.1"
+hmac = "0.9.0"
 
 
 serde = {version = "1.0.104", features = ["derive"]}
