--- a/components/funder/Cargo.toml
+++ b/components/funder/Cargo.toml
@@ -17,6 +17,7 @@ database = { path = "../database", version = "0.1.0", package = "offset-database
 
 log = "0.4"
 pretty_env_logger = "0.2"
+derive_more = "0.15.0"
 
 bytes = "0.5.4"
 futures = "0.3.1"
