--- a/components/common/Cargo.toml
+++ b/components/common/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 
-
 bytes = "0.5.4"
 futures = "0.3.1"
 
@@ -21,3 +20,4 @@ base64 = "0.10.1"
 [dev-dependencies]
 
 serde = {version = "1.0.104", features = ["derive"]}
+paste = "1.0.1"
