--- a/components/funder/Cargo.toml
+++ b/components/funder/Cargo.toml
@@ -34,6 +34,8 @@ quickcheck_macros = {version = "0.8"}
 quickcheck_derive = {version = "0.2.1"}
 rand = {version = "0.7.2"}
 
+paste = "1.0.1"
+
 [dev-dependencies]
 
 futures = {version = "0.3.1", features = ["thread-pool"]}
