--- a/components/common/Cargo.toml
+++ b/components/common/Cargo.toml
@@ -18,6 +18,9 @@ backtrace = "0.3.14"
 base64 = "0.10.1"
 uint = "0.8.5"
 
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3.0"
+
 [dev-dependencies]
 
 serde = {version = "1.0.104", features = ["derive"]}
