--- a/components/crypto/Cargo.toml
+++ b/components/crypto/Cargo.toml
@@ -26,8 +26,8 @@ base64 = "0.9"
 derive_more = "0.14.0"
 
 # Quickcheck:
-quickcheck = {version = "0.9"}
-quickcheck_derive = {version = "0.2.1"}
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3"
 
 rand = "0.7.3"
 rand_core = "0.5.1"
