--- a/components/funder/Cargo.toml
+++ b/components/funder/Cargo.toml
@@ -29,9 +29,9 @@ im = {version = "14.1.0", features = ["serde", "quickcheck"]}
 byteorder = {version = "1.1", features = ["i128"]}
 
 # Quickcheck:
-quickcheck = {version = "0.9"}
-quickcheck_macros = {version = "0.8"}
-quickcheck_derive = {version = "0.2.1"}
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3"
+quickcheck_macros = "0.9.1"
 rand = {version = "0.7.2"}
 
 paste = "1.0.1"
