--- a/components/index_client/Cargo.toml
+++ b/components/index_client/Cargo.toml
@@ -23,9 +23,10 @@ futures = "0.3.1"
 serde = {version = "1.0.104", features = ["derive"]}
 
 # Quickcheck:
-quickcheck = {version = "0.9"}
-quickcheck_macros = {version = "0.8"}
-quickcheck_derive = {version = "0.2.1"}
+quickcheck_macros = "0.9.1"
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3"
+
 rand = {version = "0.7.2"}
 
 [dev-dependencies]
