--- a/components/proto/Cargo.toml
+++ b/components/proto/Cargo.toml
@@ -33,8 +33,8 @@ num-traits = "0.2.6"
 paste = "0.1.5"
 
 # Quickcheck:
-quickcheck = {version = "0.9"}
-quickcheck_derive = {version = "0.2.1"}
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3"
 rand = {version = "0.7.2"}
 
 [dev-dependencies]
