--- a/components/stcompact/Cargo.toml
+++ b/components/stcompact/Cargo.toml
@@ -48,9 +48,9 @@ derive_more = "0.99.2"
 serde_json = "1.0.44"
 
 # Quickcheck:
-quickcheck = {version = "0.9"}
-quickcheck_macros = {version = "0.8"}
-quickcheck_derive = {version = "0.2.1"}
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3"
+quickcheck_macros = "0.9.1"
 rand = {version = "0.7.2"}
 
 [dev-dependencies]
