--- a/components/stctrl/Cargo.toml
+++ b/components/stctrl/Cargo.toml
@@ -37,9 +37,9 @@ structopt = "0.2.15"
 derive_more = "0.14.0"
 
 # Quickcheck:
-quickcheck = {version = "0.9"}
-quickcheck_macros = {version = "0.8"}
-quickcheck_derive = {version = "0.2.1"}
+quickcheck = "0.9.2"
+quickcheck_derive = "0.3"
+quickcheck_macros = "0.9.1"
 rand = {version = "0.7.2"}
 
 [dev_dependencies]
